MDEV-4594 - CREATE SERVER crashes embedded

mysql-test/r/servers.result:
  Added test case for MDEV-4594.
mysql-test/t/servers.test:
  Added test case for MDEV-4594.
sql/mysqld.cc:
  Move servers_init() call to init_server_components(), so it is called
  for embedded as well.
  
  Call servers_free() even if NO_EMBEDDED_ACCESS_CHECKS defined (because
  we call servers_init() anyway).